--- a/Note/Note.tex
+++ b/Note/Note.tex
@@ -16,7 +16,7 @@
 ~\\
 \noindent
 \textbf{Website}\\ 
-N/A\\
+\url{https://github.com/Tony-Mao/shapeFromShading}\\
 ~\\
 \textbf{Method}\\
 1. Calibrate the lighting direction. $\vec{L} = 2\vec{N}(\vec{N}\cdot \vec{V})-\vec{V}$, where $\vec{L}$ is the lighting direction, $\vec{V}$ is viewing direction of camera which by default is set to be viewing from top, and $\vec{N}$ is surface normal which can be calculated based on the calibration object.\\
